--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@ body {
 .header-nav {
   display: grid;
   grid-template-columns: repeat(5, 1fr); /* matriz fixa */
-  gap: 4px;
-  margin-top: 0px;
+  gap: 5px;
+  margin-top: 1px;
 }
 
 .header-nav a {
@@ -123,7 +123,7 @@ body {
   text-align: center;
   line-height: 1.2;
 
-  font-size: 0.7rem;        /* ~30% menor que 1rem */
+  font-size: 0.75rem;        /* ~30% menor que 1rem */
   font-weight: 600;
 
   text-decoration: none;
@@ -160,7 +160,14 @@ body {
     margin-bottom: 10px;
   }
 
+  /* BOTÕES 2x MAIS ALTOS NO MOBILE */
+  .header-nav a {
+    height: 40px;   /* antes: 20px */
+    padding: 0 4px;
+  }
+
 }
+
 
 /* =========================================================
    CONTEÚDO INSTITUCIONAL
