--- a/index.html
+++ b/index.html
@@ -162,11 +162,22 @@ body {
 
   /* BOTÕES 2x MAIS ALTOS NO MOBILE */
   .header-nav a {
-    height: 40px;   /* antes: 20px */
+    height: 40px;
     padding: 0 4px;
   }
 
+  /* REDUZ A FONTE EM 10% NO MOBILE */
+  body {
+    font-size: 90%;
+  }
+
+  /* ESCONDE O TEXTO "UFSJ" NO MOBILE */
+  .ufsj {
+    display: none;
+  }
+
 }
+
 
 
 /* =========================================================
